--- a/Final Project Test/华为云部署指南.md
+++ b/Final Project Test/华为云部署指南.md
@@ -63,7 +63,7 @@ mkdir ~/diabetes_prediction
 cd ~/diabetes_prediction
 
 # 创建Python虚拟环境(推荐)
-python3 -m venv venv
+python3 -m venv venjiav
 source venv/bin/activate
 ```
 
